--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "doctrine/collections": "1.4.0",
         "doctrine/common": "2.7.2",
         "doctrine/inflector": "1.1.0",
-        "drupal/console": "^1.0"
+        "drupal/console": "^1.0",
+        "drush/drush": "^8.1"
     },
     "repositories": [
         {
