--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -29,6 +29,7 @@ module:
   features: 0
   field: 0
   field_group: 0
+  field_ui: 0
   file: 0
   filter: 0
   flag: 0
@@ -89,6 +90,7 @@ module:
   update: 0
   user: 0
   views_infinite_scroll: 0
+  views_ui: 0
   votingapi: 0
   views: 10
   improved_theme_settings: 50
