--- a/config/sync/block.block.elsa_search_block_hero.yml
+++ b/config/sync/block.block.elsa_search_block_hero.yml
@@ -9,8 +9,8 @@ dependencies:
     - elsa
 id: elsa_search_block_hero
 theme: elsa
-region: sidebar_first
-weight: null
+region: nav
+weight: -23
 provider: null
 plugin: search_hero_block
 settings:
