--- a/config/sync/block.block.elsa_exposed_form_search_content_page_sidebar.yml
+++ b/config/sync/block.block.elsa_exposed_form_search_content_page_sidebar.yml
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_exposed_form_search_content_page_sidebar
 theme: elsa
-region: sidebar_first
-weight: 3
+region: sidebar_right_top
+weight: -23
 provider: null
 plugin: 'views_exposed_filter_block:search_content-page'
 settings:
