--- a/config/sync/block.block.elsa_exposedformgroup_eventspage_group_events.yml
+++ b/config/sync/block.block.elsa_exposedformgroup_eventspage_group_events.yml
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_exposedformgroup_eventspage_group_events
 theme: elsa
-region: sidebar_first
-weight: -9
+region: auxiliary_sidebar
+weight: -25
 provider: null
 plugin: 'views_exposed_filter_block:group_events-page_group_events'
 settings:
