--- a/config/sync/block.block.elsa_exposedformupcoming_eventspage_community_events.yml
+++ b/config/sync/block.block.elsa_exposedformupcoming_eventspage_community_events.yml
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_exposedformupcoming_eventspage_community_events
 theme: elsa
-region: sidebar_first
-weight: 3
+region: sidebar_right_bottom
+weight: -13
 provider: null
 plugin: 'views_exposed_filter_block:upcoming_events-page_community_events'
 settings:
