--- a/config/sync/block.block.elsa_group_add_event_block.yml
+++ b/config/sync/block.block.elsa_group_add_event_block.yml
@@ -9,8 +9,8 @@ dependencies:
     - elsa
 id: elsa_group_add_event_block
 theme: elsa
-region: sidebar_first
-weight: -96
+region: sidebar_right_bottom
+weight: -22
 provider: null
 plugin: group_add_event_block
 settings:
