--- a/config/sync/block.block.elsa_local_tasks.yml
+++ b/config/sync/block.block.elsa_local_tasks.yml
@@ -9,8 +9,8 @@ dependencies:
     - elsa
 id: elsa_local_tasks
 theme: elsa
-region: sidebar_first
-weight: -6
+region: main_content
+weight: -19
 provider: null
 plugin: local_tasks_block
 settings:
