--- a/config/sync/block.block.elsa_postonprofileblock.yml
+++ b/config/sync/block.block.elsa_postonprofileblock.yml
@@ -11,8 +11,8 @@ _core:
   default_config_hash: b5E5NPiSRKlKRNZcEWgscia7LJXEHE6iMoBAyh0uJRU
 id: elsa_postonprofileblock
 theme: elsa
-region: sidebar_first
-weight: -9
+region: sidebar_right_bottom
+weight: -16
 provider: null
 plugin: post_photo_profile_block
 settings:
