--- a/config/sync/block.block.elsa_search_content_block_header.yml
+++ b/config/sync/block.block.elsa_search_content_block_header.yml
@@ -8,8 +8,8 @@ dependencies:
     - elsa
 id: elsa_search_content_block_header
 theme: elsa
-region: sidebar_first
-weight: -9
+region: nav
+weight: -20
 provider: null
 plugin: search_content_block
 settings:
