--- a/config/sync/block.block.elsa_views_block__activity_stream_group_block_stream_group.yml
+++ b/config/sync/block.block.elsa_views_block__activity_stream_group_block_stream_group.yml
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_views_block__activity_stream_group_block_stream_group
 theme: elsa
-region: content
-weight: -9
+region: sidebar_right_bottom
+weight: -19
 provider: null
 plugin: 'views_block:activity_stream_group-block_stream_group'
 settings:
