--- a/config/sync/block.block.elsa_views_block__event_enrollments_event_enrollments_socialbase.yml
+++ b/config/sync/block.block.elsa_views_block__event_enrollments_event_enrollments_socialbase.yml
@@ -11,7 +11,7 @@ dependencies:
     - elsa
 id: elsa_views_block__event_enrollments_event_enrollments_socialbase
 theme: elsa
-region: sidebar_first
+region: sidebar_right_bottom
 weight: -20
 provider: null
 plugin: 'views_block:event_enrollments-event_enrollments'
