--- a/config/sync/block.block.elsa_views_block__events_block_events_on_profile.yml
+++ b/config/sync/block.block.elsa_views_block__events_block_events_on_profile.yml
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_views_block__events_block_events_on_profile
 theme: elsa
-region: sidebar_first
-weight: 1
+region: bottom_content
+weight: -23
 provider: null
 plugin: 'views_block:events-block_events_on_profile'
 settings:
