--- a/config/sync/block.block.elsa_views_block__group_members_block_newest_members.yml
+++ b/config/sync/block.block.elsa_views_block__group_members_block_newest_members.yml
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_views_block__group_members_block_newest_members
 theme: elsa
-region: sidebar_first
-weight: 5
+region: sidebar_right_bottom
+weight: -7
 provider: null
 plugin: 'views_block:group_members-block_newest_members'
 settings:
