--- a/config/sync/block.block.elsa_views_block__latest_topics_group_topics_block.yml
+++ b/config/sync/block.block.elsa_views_block__latest_topics_group_topics_block.yml
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_views_block__latest_topics_group_topics_block
 theme: elsa
-region: sidebar_first
-weight: 3
+region: sidebar_right_bottom
+weight: -12
 provider: null
 plugin: 'views_block:latest_topics-group_topics_block'
 settings:
