--- a/config/sync/block.block.elsa_views_block__newest_users_block_newest_users.yml
+++ b/config/sync/block.block.elsa_views_block__newest_users_block_newest_users.yml
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_views_block__newest_users_block_newest_users
 theme: elsa
-region: sidebar_first
-weight: 5
+region: sidebar_right_bottom
+weight: -6
 provider: null
 plugin: 'views_block:newest_users-block_newest_users'
 settings:
