--- a/config/sync/block.block.elsa_views_block__upcoming_events_block_community_events.yml
+++ b/config/sync/block.block.elsa_views_block__upcoming_events_block_community_events.yml
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_views_block__upcoming_events_block_community_events
 theme: elsa
-region: sidebar_first
-weight: 2
+region: auxiliary_sidebar
+weight: -22
 provider: null
 plugin: 'views_block:upcoming_events-block_community_events'
 settings:
