--- a/config/sync/block.block.elsa_views_block__upcoming_events_upcoming_events_group.yml
+++ b/config/sync/block.block.elsa_views_block__upcoming_events_upcoming_events_group.yml
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_views_block__upcoming_events_upcoming_events_group
 theme: elsa
-region: sidebar_first
-weight: 2
+region: auxiliary_sidebar
+weight: -23
 provider: null
 plugin: 'views_block:upcoming_events-upcoming_events_group'
 settings:
