Added new content types for elsa public pages

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "drupal/console": "^1.0",
         "drush/drush": "^8.1",
         "drupal/components": "^1.0",
-        "bixal/style_guide_response": "^1.0@RC"
+        "bixal/style_guide_response": "^1.0@RC",
+        "drupal/paragraphs": "^1.2"
     },
     "repositories": [
         {
