--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -6,12 +6,14 @@ dependencies:
     - core.entity_view_display.comment.comment.default
     - field.field.node.event.body
     - field.field.node.event.field_content_visibility
+    - field.field.node.event.field_development_objective
     - field.field.node.event.field_event_address
     - field.field.node.event.field_event_comments
     - field.field.node.event.field_event_date
     - field.field.node.event.field_event_date_end
     - field.field.node.event.field_event_image
     - field.field.node.event.field_event_location
+    - field.field.node.event.field_event_type
     - field.field.node.event.field_files
     - node.type.event
   module:
@@ -33,6 +35,14 @@ content:
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_development_objective:
+    weight: 7
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_event_address:
     type: address_plain
@@ -58,6 +68,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     region: content
+  field_event_type:
+    type: entity_reference_label
+    weight: 2
+    label: hidden
+    settings:
+      link: false
+    third_party_settings: {  }
+    region: content
   field_files:
     weight: 4
     label: above
@@ -76,6 +94,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  addtoany: true
   field_content_visibility: true
   field_event_date: true
   field_event_date_end: true
