--- a/config/sync/core.entity_view_display.node.project.default.yml
+++ b/config/sync/core.entity_view_display.node.project.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.project.field_development_objective
     - field.field.node.project.field_event_date
     - field.field.node.project.field_event_date_end
+    - field.field.node.project.field_implementing_partner
     - field.field.node.project.field_link_to_usaid_page
     - field.field.node.project.field_location
     - field.field.node.project.field_themes
@@ -65,6 +66,14 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_implementing_partner:
+    weight: 109
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_link_to_usaid_page:
     weight: 105
