--- a/config/sync/core.entity_view_display.node.topic.default.yml
+++ b/config/sync/core.entity_view_display.node.topic.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_display.comment.comment.default
     - field.field.node.topic.body
     - field.field.node.topic.field_content_visibility
+    - field.field.node.topic.field_development_objective
     - field.field.node.topic.field_files
     - field.field.node.topic.field_topic_comments
     - field.field.node.topic.field_topic_image
@@ -29,6 +30,14 @@ content:
     weight: 0
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_development_objective:
+    weight: 11
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_files:
     weight: 3
@@ -54,6 +63,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  addtoany: true
   field_content_visibility: true
   field_topic_image: true
   field_topic_type: true
