--- a/config/sync/core.entity_form_display.node.learning_library_item.default.yml
+++ b/config/sync/core.entity_form_display.node.learning_library_item.default.yml
@@ -23,7 +23,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 6
     settings:
       rows: 9
       summary_rows: 3
@@ -32,12 +32,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
   field_development_objective:
-    weight: 33
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -46,20 +46,20 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_files:
-    weight: 36
+    weight: 7
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
     type: file_generic
     region: content
   field_library_comments:
-    weight: 37
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: comment_default
     region: content
   field_project:
-    weight: 34
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -68,26 +68,20 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_publication_type:
-    weight: 32
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 8
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_themes:
-    weight: 35
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 11
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_buttons
     region: content
   path:
     type: path
-    weight: 30
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -95,19 +89,19 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 3
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 4
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -115,7 +109,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
