--- a/config/sync/core.entity_form_display.node.project.default.yml
+++ b/config/sync/core.entity_form_display.node.project.default.yml
@@ -25,7 +25,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 5
     settings:
       rows: 9
       summary_rows: 3
@@ -34,19 +34,19 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   field_budget:
-    weight: 37
+    weight: 8
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_development_objective:
-    weight: 38
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -55,19 +55,19 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_event_date:
-    weight: 33
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_event_date_end:
-    weight: 34
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_implementing_partner:
-    weight: 39
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
@@ -76,7 +76,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_link_to_usaid_page:
-    weight: 35
+    weight: 6
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -84,26 +84,20 @@ content:
     type: link_default
     region: content
   field_location:
-    weight: 32
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 2
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_themes:
-    weight: 36
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 7
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   path:
     type: path
-    weight: 30
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -111,19 +105,19 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 12
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 13
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -131,7 +125,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
