Added new date field for projects

--- a/config/sync/core.entity_form_display.node.project.default.yml
+++ b/config/sync/core.entity_form_display.node.project.default.yml
@@ -9,9 +9,12 @@ dependencies:
     - field.field.node.project.field_implementing_partner
     - field.field.node.project.field_link_to_usaid_page
     - field.field.node.project.field_location
+    - field.field.node.project.field_project_end_date
+    - field.field.node.project.field_project_start_date
     - field.field.node.project.field_themes
     - node.type.project
   module:
+    - datetime
     - link
     - path
     - text
@@ -73,6 +76,18 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_project_end_date:
+    weight: 27
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_project_start_date:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
     region: content
   field_themes:
     weight: 7
