--- a/config/sync/block.block.socialblue_exposed_form_search_content_page_sidebar.yml
+++ b/config/sync/block.block.socialblue_exposed_form_search_content_page_sidebar.yml
@@ -9,6 +9,8 @@ dependencies:
     - views
   theme:
     - socialblue
+_core:
+  default_config_hash: G7CVrF8YuE82q46xnmfrQt8auY_tjXHpTl_P6gSMQGU
 id: socialblue_exposed_form_search_content_page_sidebar
 theme: socialblue
 region: complementary_top
