--- a/config/sync/block.block.socialblue_search_block_hero.yml
+++ b/config/sync/block.block.socialblue_search_block_hero.yml
@@ -7,6 +7,8 @@ dependencies:
     - system
   theme:
     - socialblue
+_core:
+  default_config_hash: tSS53SEnohp-c3wENp3brzC_nwNRH4DavQ72DYABDQ4
 id: socialblue_search_block_hero
 theme: socialblue
 region: hero
