--- a/config/sync/block.block.socialblue_search_content_block_header.yml
+++ b/config/sync/block.block.socialblue_search_content_block_header.yml
@@ -6,6 +6,8 @@ dependencies:
     - social_search
   theme:
     - socialblue
+_core:
+  default_config_hash: VQ6q9FRybbWvnB24twPpJ2FYXWgncoYqXetQMbg7Gvs
 id: socialblue_search_content_block_header
 theme: socialblue
 region: content_top
