--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -41,6 +41,7 @@ module:
   image: 0
   image_effects: 0
   image_widget_crop: 0
+  kint: 0
   like_and_dislike: 0
   link: 0
   mailsystem: 0
@@ -88,6 +89,7 @@ module:
   text: 0
   token: 0
   toolbar: 0
+  twig_tweak: 0
   update: 0
   user: 0
   views_infinite_scroll: 0
