--- a/config/sync/core.entity_view_display.profile.profile.default.yml
+++ b/config/sync/core.entity_view_display.profile.profile.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.profile.profile.field_gender
     - field.field.profile.profile.field_profile_address
     - field.field.profile.profile.field_profile_expertise
     - field.field.profile.profile.field_profile_first_name
@@ -27,14 +28,14 @@ bundle: profile
 mode: default
 content:
   field_profile_address:
-    weight: 1
+    weight: 2
     label: visually_hidden
     settings: {  }
     third_party_settings: {  }
     type: address_default
     region: content
   field_profile_expertise:
-    weight: 4
+    weight: 5
     label: visually_hidden
     settings:
       link: true
@@ -42,7 +43,7 @@ content:
     type: entity_reference_label
     region: content
   field_profile_interests:
-    weight: 3
+    weight: 4
     label: visually_hidden
     settings:
       link: true
@@ -59,20 +60,21 @@ content:
     region: content
   field_profile_profile_tag:
     type: entity_reference_label
-    weight: 0
+    weight: 1
     label: visually_hidden
     settings:
       link: false
     third_party_settings: {  }
     region: content
   field_profile_self_introduction:
-    weight: 2
+    weight: 3
     label: visually_hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
 hidden:
+  field_gender: true
   field_profile_first_name: true
   field_profile_function: true
   field_profile_image: true
