--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -55,6 +55,8 @@ permissions:
   - 'view node.book.field_content_visibility:public content'
   - 'view node.event.field_content_visibility:community content'
   - 'view node.event.field_content_visibility:public content'
+  - 'view node.learning_library_item.field_content_visibility:community content'
+  - 'view node.learning_library_item.field_content_visibility:public content'
   - 'view node.page.field_content_visibility:community content'
   - 'view node.page.field_content_visibility:public content'
   - 'view node.topic.field_content_visibility:community content'
