--- a/config/sync/views.view.learning_library_items.yml
+++ b/config/sync/views.view.learning_library_items.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_files
     - field.storage.node.field_themes
     - node.type.learning_library_item
   module:
@@ -36,7 +35,7 @@ display:
         type: views_query
         options:
           disable_sql_rewrite: false
-          distinct: false
+          distinct: true
           replica: false
           query_comment: ''
           query_tags: {  }
@@ -97,18 +96,18 @@ display:
       row:
         type: fields
       fields:
-        field_files:
-          id: field_files
-          table: node__field_files
-          field: field_files
-          relationship: none
+        extension:
+          id: extension
+          table: file_managed
+          field: extension
+          relationship: field_files_target_id
           group_type: group
           admin_label: ''
-          label: Files
+          label: Type
           exclude: false
           alter:
             alter_text: false
-            text: '{{ field_files|trim }}'
+            text: ''
             make_link: false
             path: ''
             absolute: false
@@ -141,14 +140,16 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: ''
+          empty: webpage
           hide_empty: false
           empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: file_default
-          settings: {  }
-          group_column: ''
+          hide_alter_empty: false
+          click_sort_column: value
+          type: file_extension
+          settings:
+            link_to_file: false
+            extension_detect_tar: false
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -158,6 +159,7 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          entity_type: file
           plugin_id: field
         title:
           id: title
@@ -273,7 +275,7 @@ display:
           click_sort_column: value
           type: timestamp
           settings:
-            date_format: medium
+            date_format: social_medium_date
             custom_date_format: ''
             timezone: ''
           group_column: value
@@ -389,23 +391,66 @@ display:
           expose:
             label: ''
           granularity: second
-      title: 'Learning library items'
+      title: Resources
       header: {  }
       footer: {  }
       empty: {  }
-      relationships: {  }
-      arguments: {  }
+      relationships:
+        field_files_target_id:
+          id: field_files_target_id
+          table: node__field_files
+          field: field_files_target_id
+          relationship: none
+          group_type: group
+          admin_label: 'file from field_files'
+          required: false
+          plugin_id: standard
+      arguments:
+        field_development_objective_target_id:
+          id: field_development_objective_target_id
+          table: node__field_development_objective
+          field: field_development_objective_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: node
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          plugin_id: numeric
       display_extenders: {  }
     cache_metadata:
       max-age: 0
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.node.field_files'
         - 'config:field.storage.node.field_themes'
   block_1:
     display_plugin: block
@@ -419,9 +464,9 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.node.field_files'
         - 'config:field.storage.node.field_themes'
