--- a/config/sync/profile.type.profile.yml
+++ b/config/sync/profile.type.profile.yml
@@ -6,11 +6,13 @@ _core:
   default_config_hash: 1-AJ1YMpptZTBx_FpwBNjm7K0yiZ2ghqVDL_CxPtULs
 id: profile
 label: Profile
-registration: false
+registration: true
 multiple: false
 roles:
   authenticated: '0'
   administrator: '0'
+  contentmanager: '0'
+  sitemanager: '0'
 weight: 0
 use_revisions: false
 description: 'The default Open Social profile type'
