--- a/config/sync/core.entity_form_display.profile.profile.default.yml
+++ b/config/sync/core.entity_form_display.profile.profile.default.yml
@@ -3,26 +3,24 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.profile.profile.field_gender
-    - field.field.profile.profile.field_profile_address
     - field.field.profile.profile.field_profile_expertise
     - field.field.profile.profile.field_profile_first_name
     - field.field.profile.profile.field_profile_function
+    - field.field.profile.profile.field_profile_gender
     - field.field.profile.profile.field_profile_image
     - field.field.profile.profile.field_profile_interests
     - field.field.profile.profile.field_profile_last_name
+    - field.field.profile.profile.field_profile_location
     - field.field.profile.profile.field_profile_organization
-    - field.field.profile.profile.field_profile_phone_number
     - field.field.profile.profile.field_profile_profile_tag
+    - field.field.profile.profile.field_profile_project
     - field.field.profile.profile.field_profile_self_introduction
     - field.field.profile.profile.field_profile_show_email
     - image.style.social_x_large
     - profile.type.profile
   module:
-    - address
     - field_group
     - image_widget_crop
-    - telephone
     - text
 third_party_settings:
   field_group:
@@ -30,7 +28,7 @@ third_party_settings:
       children:
         - field_profile_first_name
         - field_profile_last_name
-        - field_gender
+        - field_profile_gender
         - field_profile_image
       parent_name: ''
       weight: 0
@@ -45,12 +43,15 @@ third_party_settings:
       children:
         - field_profile_function
         - field_profile_organization
+        - field_profile_project
+        - field_profile_location
       parent_name: ''
       weight: 1
-      label: 'Function and organisation'
+      label: 'Function, organisation, and location'
       format_type: fieldset
       format_settings:
-        label: 'Function and organisation'
+        label: 'Function, organisation, and location'
+        description: ''
         required_fields: true
         id: work
         classes: scollspy
@@ -59,9 +60,8 @@ third_party_settings:
         - field_profile_self_introduction
         - field_profile_expertise
         - field_profile_interests
-        - field_profile_profile_tag
       parent_name: ''
-      weight: 3
+      weight: 2
       label: 'Self introduction, expertise and interests'
       format_type: fieldset
       format_settings:
@@ -69,19 +69,6 @@ third_party_settings:
         required_fields: true
         id: details
         classes: scrollspy
-    group_profile_contact_info:
-      children:
-        - field_profile_phone_number
-        - field_profile_address
-      parent_name: ''
-      weight: 2
-      label: 'Phone number and location'
-      format_type: fieldset
-      format_settings:
-        label: 'Phone number and location'
-        required_fields: true
-        id: contact
-        classes: scollspy
 _core:
   default_config_hash: 3m__rlpNdR6CGyglD-I4hlW473gTbE285B3wmm-vk78
 id: profile.profile.default
@@ -89,19 +76,6 @@ targetEntityType: profile
 bundle: profile
 mode: default
 content:
-  field_gender:
-    weight: 3
-    settings: {  }
-    third_party_settings: {  }
-    type: options_buttons
-    region: content
-  field_profile_address:
-    weight: 7
-    settings:
-      default_country: site_default
-    third_party_settings: {  }
-    type: address_default
-    region: content
   field_profile_expertise:
     weight: 6
     settings:
@@ -126,6 +100,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_profile_gender:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
     region: content
   field_profile_image:
     weight: 4
@@ -161,6 +141,12 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_profile_location:
+    weight: 13
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_profile_organization:
     weight: 11
     settings:
@@ -169,18 +155,14 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_profile_phone_number:
-    weight: 6
+  field_profile_project:
+    weight: 12
     settings:
+      match_operator: CONTAINS
+      size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: telephone_default
-    region: content
-  field_profile_profile_tag:
-    weight: 8
-    settings: {  }
-    third_party_settings: {  }
-    type: options_buttons
+    type: entity_reference_autocomplete
     region: content
   field_profile_self_introduction:
     weight: 5
@@ -191,4 +173,5 @@ content:
     type: text_textarea
     region: content
 hidden:
+  field_profile_profile_tag: true
   field_profile_show_email: true
